# RED-OFFICE-GOOGLE-INTEGRATION

./: .gitignore  Pipfile  README.md  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
create_event/: create_event.py  sample.json
delete_event/: delete_event.py  sample.json
docs/: CLI_Initialize_credentials.md  CLI_calendar_events.md  CLI_gmail.md  CLI_handler.md  CLI_spreadsheet.md  calendar-events.md  gmail.md  google_service_credential_service.md  google_service_file_handler.md  index.md  log.md  project_structure.md  setup_guide.md  source.md  spreadsheet.md
list_event/: list_event.py  sample.json
modules/: __init__.py  events.py  settings.py  validate_credentials.py
modules/log/: __init__.py  logger_config.py
red_office_google_integration/gmail/: mail.py  message_creation.py
red_office_google_integration/google_service/: file_handler.py  google_credentials_service.py
red_office_google_integration/log/: log_handler.py
red_office_google_integration/spreadsheets/: sheets.py
red_office_google_integration/src/: setting.py  utils.py
red_office_google_integration/tests/: test_utils.py
red_office_google_integration_calendar/: setting.py
red_office_google_integration_calendar/events/: events.py
red_office_google_integration_calendar/google_service/: file_handler.py  google_credentials_service.py
red_office_google_integration_calendar/log/: log.jsonl  log_handler.py
red_office_google_integration_calendar/src/: setting.py  utils.py
site/: 404.html  index.html  objects.inv
site/CLI_Initialize_credentials/: index.html
(+20 files in other folders)
